# pretix-zugferd

./: .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_zugferd/: __init__.py  apps.py  invoice.py  signals.py  urls.py  views.py
pretix_zugferd/locale/: django.pot
pretix_zugferd/locale/de/LC_MESSAGES/: django.po
pretix_zugferd/locale/de_Informal/LC_MESSAGES/: django.po
pretix_zugferd/migrations/: 0001_initial.py
pretix_zugferd/templates/pretix_zugferd/: settings.html
tests/: conftest.py  test_invoice.py  utils.py
tests/results/: cancellation.xml  default.xml  delivery_date_multiple.xml  delivery_date_off.xml  delivery_dates.xml  paid.xml  tax_code_exempt.xml  tax_code_guess_AU.xml  tax_code_reverse_charge.xml  xrechnung.xml
