[project]
name = "pretix-zugferd"
dynamic = ["version"]
description = "Invoice renderer that annotates pretix invoices with ZUGFeRD data"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "drafthorse==2025.1.*",
]

[project.entry-points."pretix.plugin"]
pretix_zugferd = "pretix_zugferd:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretixeu/pretix-zugferd"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_zugferd.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
